--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Authors@R:
     person("Jess", "Kunke", , "jessicakunke@gmail.com", role = c("aut", "cre"),
            comment = c(ORCID = "0009-0006-1475-3734"))
 Description: What the package does (one paragraph).
-License: `use_mit_license()`
+License: GPL (>= 3)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
