--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,9 @@
 
 export("%>%")
 export(crop_raw_data)
+export(make_qc_plots_of_cropped_data)
 importFrom(magrittr,"%!>%")
 importFrom(magrittr,"%>%")
 importFrom(rlang,.data)
 importFrom(stringr,str_split_i)
+importFrom(utils,read.csv)
