--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export("%>%")
 export(crop_raw_data)
 export(make_qc_plots_of_cropped_data)
+export(read_in_qcd_data)
 importFrom(magrittr,"%!>%")
 importFrom(magrittr,"%>%")
 importFrom(rlang,.data)
