Add site impairments code

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,8 +8,10 @@ export(make_qc_plots_of_cropped_data)
 export(match_group_to_WQS)
 export(match_sites_to_WQS_groups)
 export(read_in_qcd_data)
+export(site_impairments_table)
 importFrom(magrittr,"%!>%")
 importFrom(magrittr,"%>%")
 importFrom(rlang,.data)
 importFrom(stringr,str_split_i)
 importFrom(utils,read.csv)
+importFrom(utils,tail)
