--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -2,3 +2,10 @@ url: https://tribalxg.github.io/dataQCtools/
 template:
   bootstrap: 5
 
+articles:
+- title: Articles
+  navbar: ~
+  contents:
+  - articles/cropping
+  - articles/qcplots
+  - articles/7DADM_site_impairments
