--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -6,6 +6,6 @@ articles:
 - title: Articles
   navbar: ~
   contents:
-  - articles/cropping
-  - articles/qcplots
-  - articles/7DADM_site_impairments
+  - articles/cropping.Rmd
+  - articles/qcplots.Rmd
+  - articles/7DADM_site_impairments.Rmd
