add data requirements doc

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -19,6 +19,7 @@ articles:
 - title: Articles
   navbar: ~
   contents:
+  - articles/data
   - articles/cropping
   - articles/qcplots
   - articles/7DADM_site_impairment
